--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -36,6 +36,9 @@ header{
         }
     }
 }
+.bg-dark {
+    background-color: #343a4000!important;
+}
 /* MediasQuery Movile */ 
 header{
     @media only screen and (max-width:576px){
@@ -71,5 +74,4 @@ header{
     @media only screen and (max-width:576px){
         background-color: #343a4073!important;
     }
-
 }
