--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -52,12 +52,12 @@ header{
                 ul{
                     li{
                         a{
-
+                            font-size: 2.5rem;
                         }
                         .dropdown-menu{
                         }
                         .dropdown-item{
-
+                            font-size: 2rem !important;
                         }
                     }
                 }
