--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,19 +7,18 @@ footer{
     margin-top: 1%;
     a{
         img{
-            width: 50%;
+             width: 100%;
         }
 
     }
 }
 
 /* MediasQuery Movile */ 
-footer{
-    @media only screen and (max-width:576px){
-    a{
-        img{
-            width: 50%;
-        }
-    }
-    }
-}
+
+/* MediasQuery Movile Medium */ 
+
+/* MediasQuery Tablet */ 
+
+/* MediasQuery Tablet grande */ 
+
+/* MediasQuery Final*/ 
