--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,64 +1,78 @@
 header{
-    .bg-primary {
-        background-color: #007bff00!important;
-    }
-    nav{
-        a{
-            .img-logo{
-                width: 230px;
-            }
-        }
+    section{
         div{
-            ul{
-                li{
-                    margin: 0% 7%;
-                    a{
-                        @extend %aNav;
-                        &:hover{
-                                color: #ff0800!important;
-                        }
+            .bg-dark{
+                background-color: #80808000 !important;
+                display: flex;
+                flex-direction: column;
+            }
+            nav{
+                a{
+                    .nav-img-logo{
+                        width: 300px;
+                        height: 150px;
                     }
-                    .dropdown-menu{
-                        background-color: #0000ff00!important;
-                        &:hover{
-                            background-color: #0000ff00!important;
-                        }
-                        .dropdown-item{
-                            @extend %a2Nav;
-                            &:hover{
-                                background-color: #0000ff00!important;
-                                color: #ff0800!important;
-                            }
-                        }
+                    font-weight: 900;
+                    font-size: xxx-large;
+                }
+                .dropdown-menu{
+                    background-color: #ffffff00;
+                    border: none;
+                }
+                .dropdown-item{
+                    background-color: #ffffff00 !important;
+                    color: #008cd0;
+                    font-weight: 600;
+                    &:hover{
+                        color: #ff0800;
                     }
                 }
             }
         }
     }
 }
-.bg-dark {
-    background-color: #343a4000!important;
+.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
+    color: #008cd0;
+    &:hover{
+        color: #ff0800;
+    }
 }
+.navbar-dark .navbar-nav .nav-link {
+    color: #008cd0;
+    &:hover{
+        color: #ff0800;
+    }
+}
+/*Media Query de Boostrap*/
+.navbar-expand-lg {
+    @media (min-width: 992px){
+    flex-flow: wrap;
+    
+    }
+}
+
 /* MediasQuery Movile */ 
 header{
-    @media only screen and (max-width:576px){
-        nav{
-            a{
-                .img-logo{
-                    width: 147px;
-                }
-            }
+    @media only screen and (max-width:768px){
+        background-position-x: center;
+        height:900px;
+        section{
             div{
-                ul{
-                    li{
-                        a{
-                            font-size: 2.5rem;
-                        }
-                        .dropdown-menu{
-                        }
-                        .dropdown-item{
-                            font-size: 2rem !important;
-                        }
+                .bg-dark{
+                    flex-direction: row;
+                }
+                nav{
+                    a{
+                        font-weight: 900;
+                        font-size: 40px;
+                        padding-left: 0% !important;
+                    }
+                    .dropdown-menu{
+                    }
+                    .dropdown-item{
+                        color: #ff0800;
+                        background-color: #fdff036e !important;
+                        
                     }
                 }
             }
@@ -66,12 +80,74 @@ header{
     }
 }
 .navbar-dark .navbar-toggler {
-    @media only screen and (max-width:576px){
-         border-color: #008dd1; 
-    }    
+    @media only screen and (max-width:768px){
+        border: solid 4px #01d9da;
+        width: 80px;
+        height: 55px;
+    }
 }
-.bg-dark {
-    @media only screen and (max-width:576px){
-        background-color: #343a4073!important;
+
+/*MediasQuery Tablet*/
+header{
+    @media only screen and (min-width:769px) and (max-width:991px){
+        background-position-x: center;
+        height:900px;
+        section{
+            div{
+                .bg-dark{
+                    flex-direction: row;
+                }
+                nav{
+                    a{
+                        font-weight: 900;
+                        font-size: 40px;
+                        padding-left: 0% !important;
+                    }
+                    .dropdown-menu{
+                    }
+                    .dropdown-item{
+                        color: #ff0800;
+                        background-color: #fdff036e !important;
+                        
+                    }
+                }
+            }
+        }
+    }
+}
+.navbar-dark .navbar-toggler {
+    @media only screen and (min-width:769px) and (max-width:991px){
+        border: solid 4px #01d9da;
+        width: 80px;
+        height: 55px;
+    }
+}
+
+/* MediasQuery Mediano hasta Desktop*/    
+header{
+    @media only screen and (min-width:992px) and (max-width:1185px){
+        background-position-x: center;
+        height:594px;
+        section{
+            div{
+                .bg-dark{
+                    background-color: #80808000 !important;
+                }
+                nav{
+                    a{
+                        font-weight: 900;
+                        font-size: 40px;
+                        padding-left: 0% !important;
+                    }
+                    .dropdown-menu{
+                    }
+                    .dropdown-item{
+                        color: #ff0800;
+                        background-color: #fdff036e !important;
+                        
+                    }
+                }
+            }
+        }
     }
 }
