--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -63,6 +63,10 @@ header{
                 }
                 nav{
                     a{
+                        .nav-img-logo{
+                            width: 150px;
+                            height: 100px;
+                        }
                         font-weight: 900;
                         font-size: 40px;
                         padding-left: 0% !important;
