--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ header {
   margin-left: 1%;
 }
 
+.articulo-dos-index section .div-card-flex {
+  display: flex;
+  justify-content: center;
+}
 .articulo-dos-index section h2 {
   text-align: center;
 }
@@ -119,6 +123,10 @@ header {
 }
 
 @media only screen and (max-width: 768px) {
+  .articulo-dos-index section .div-card-flex {
+    display: flex;
+    justify-content: center;
+  }
   .articulo-dos-index section h2 {
     font-size: 5rem;
     text-align: center;
@@ -145,6 +153,63 @@ header {
   }
 }
 
+/* MediasQuery Tablet */
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  h1 {
+    font-size: 8rem;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  .articulo-uno-index {
+    background-position-x: right;
+  }
+  .articulo-uno-index section {
+    display: flex;
+  }
+  .articulo-uno-index section h2 {
+    font-size: 7rem;
+  }
+  .articulo-uno-index section p {
+    font-size: 2rem;
+    text-align: center;
+    margin: 0%;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  .articulo-dos-index section .div-card-flex {
+    display: flex;
+    justify-content: center;
+    padding: 0% 10%;
+  }
+  .articulo-dos-index section h2 {
+    font-size: 7rem;
+    text-align: center;
+  }
+  .articulo-dos-index section .card {
+    margin: 10% 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+  }
+  .articulo-dos-index section .card .card-img-1 {
+    width: 60%;
+  }
+  .articulo-dos-index section .card .card-img-2 {
+    width: 100%;
+  }
+  .articulo-dos-index section .card .card-img-3 {
+    width: 60%;
+  }
+  .articulo-dos-index section .card .card-img-4 {
+    width: 100%;
+  }
+}
+
+/* MediasQuery Desktop */
 header section div .bg-dark {
   background-color: #80808000 !important;
   display: flex;
@@ -298,14 +363,16 @@ footer section div a img {
     height: auto;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-top: 1%;
+    justify-content: center;
+    margin: 0%;
   }
   footer section {
     display: flex;
     justify-content: space-between;
   }
   footer section div a {
+    display: flex;
+    align-items: center;
     font-size: 3rem;
   }
   footer section div a .i-footer {
@@ -316,10 +383,61 @@ footer section div a img {
   }
 }
 
-/* MediasQuery Movile Medium */
 /* MediasQuery Tablet */
-/* MediasQuery Tablet grande */
-/* MediasQuery Final*/
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  footer {
+    background-color: #000000 !important;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0%;
+  }
+  footer section {
+    display: flex;
+    justify-content: space-between;
+  }
+  footer section div a {
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+  }
+  footer section div a .i-footer {
+    margin-left: 0%;
+  }
+  footer section div a img {
+    width: auto;
+  }
+}
+
+/* MediasQuery Desktop */
+@media only screen and (min-width: 992px) and (max-width: 1874px) {
+  footer {
+    background-color: #000000 !important;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0%;
+  }
+  footer section {
+    display: flex;
+    justify-content: space-between;
+  }
+  footer section div a {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+  }
+  footer section div a .i-footer {
+    margin-left: 0%;
+  }
+  footer section div a img {
+    width: 100px;
+  }
+}
+
 /*Background de main*/
 main {
   overflow: hidden;
