--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -29,13 +29,15 @@ footer{
     height: auto;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-top: 1%;
+    justify-content:center;
+    margin: 0%;
     section{
         display: flex;
         justify-content: space-between;
         div{
             a{
+                display: flex;
+                align-items: center;
                 font-size: 3rem;
                 .i-footer{
                     margin-left: 0%;
@@ -49,10 +51,62 @@ footer{
 }
 }
 
-/* MediasQuery Movile Medium */ 
-
 /* MediasQuery Tablet */ 
+footer{
+    @media only screen and (min-width:769px) and (max-width:991px){
+        background-color: #000000!important;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        margin: 0%;
+        section{
+            display: flex;
+            justify-content: space-between;
+            div{
+                a{
+                    display: flex;
+                    align-items: center;
+                    font-size: 3rem;
+                    .i-footer{
+                        margin-left: 0%;
+                    }
+                    img{
+                        width: auto;
+                   }
+                }
+            }
+        }
+}
+}
 
-/* MediasQuery Tablet grande */ 
+/* MediasQuery Desktop */ 
+footer{
+    @media only screen and (min-width:992px) and (max-width:1874px){
+        background-color: #000000!important;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        margin: 0%;
+        section{
+            display: flex;
+            justify-content: space-between;
+            div{
+                a{
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    font-size: 2rem;
+                    .i-footer{
+                        margin-left: 0%;
+                    }
+                    img{
+                        width: 100px;
+                   }
+                }
+            }
+        }
+}
+}
 
-/* MediasQuery Final*/ 
