--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -30,6 +30,10 @@ h1{
 }
 .articulo-dos-index{ 
     section{
+        .div-card-flex{
+            display: flex;
+            justify-content: center;
+        }
         h2{
             @extend %h2;
             text-align: center;
@@ -82,6 +86,10 @@ h1{
 .articulo-dos-index{ 
     @media only screen and (max-width:768px){
     section{
+        .div-card-flex{
+            display: flex;
+            justify-content: center;
+        }
         h2{
             font-size: 5rem;
             text-align: center;
@@ -107,5 +115,66 @@ h1{
                 }
             } 
         }
+        
     }
 }
+
+/* MediasQuery Tablet */ 
+h1{
+    @media only screen and (min-width:769px) and (max-width:991px){
+        font-size: 8rem;      
+    }
+}
+.articulo-uno-index{
+    @media only screen and (min-width:769px) and (max-width:991px){
+        background-position-x: right;
+    section{
+        display: flex;
+        h2{
+            font-size: 7rem;
+        }
+        p{
+            font-size: 2rem;
+            text-align: center;
+            margin: 0%;
+        }
+    }
+  }
+}
+.articulo-dos-index{ 
+    @media only screen and (min-width:769px) and (max-width:991px){
+    section{
+        .div-card-flex{
+            display: flex;
+            justify-content: center;
+            padding: 0% 10%;
+        }
+        h2{
+            font-size: 7rem;
+            text-align: center;
+        } 
+        .card{
+            margin: 10% 0%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+            height: auto;
+            .card-img-1{
+                width: 60%;
+            }
+            .card-img-2{
+                width: 100%;
+            }
+            .card-img-3{
+                width: 60%;
+            }
+            .card-img-4{
+                width: 100%;
+                }
+            } 
+        }
+        
+    }
+}
+/* MediasQuery Desktop */ 
