--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -12,6 +12,12 @@
     font-size: 7rem;
     color: #ff0800;
 }
+%h3{
+    font-family: 'DragonBallH';
+    font-size: 6.7rem;
+    color: #ff0800;
+}
+
 %p{
     font-family: 'DragonBallText';
     font-size: 3rem;
