--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ header {
 /* MediasQuery Movile */
 @media only screen and (max-width: 768px) {
   h1 {
-    font-size: 5.5rem;
+    font-size: 4rem;
   }
 }
 
@@ -216,10 +216,27 @@ header {
 }
 
 /* MediasQuery Desktop */
+header {
+  padding: 0% !important;
+  margin: 0% !important;
+}
+header section {
+  padding: 0% !important;
+  margin: 0% !important;
+}
+header section div {
+  padding: 0% !important;
+  margin: 0% !important;
+}
 header section div .bg-dark {
   background-color: #80808000 !important;
   display: flex;
   flex-direction: column;
+  margin: 0%;
+}
+header section div nav {
+  padding: 0% !important;
+  margin: 0% !important;
 }
 header section div nav a {
   font-weight: 900;
@@ -267,14 +284,14 @@ header section div nav .dropdown-item:hover {
 @media only screen and (max-width: 768px) {
   header {
     background-position-x: center;
-    height: 775px;
+    height: 875px;
   }
   header section div .bg-dark {
     flex-direction: row;
   }
   header section div nav a {
     font-weight: 900;
-    font-size: 35px;
+    font-size: 30px;
     padding-left: 0% !important;
   }
   header section div nav a .nav-img-logo {
@@ -291,7 +308,8 @@ header section div nav .dropdown-item:hover {
   .navbar-dark .navbar-toggler {
     border: solid 4px #01d9da;
     width: 80px;
-    height: 55px;
+    height: 80px;
+    margin-right: 7%;
   }
 }
 
@@ -318,7 +336,8 @@ header section div nav .dropdown-item:hover {
   .navbar-dark .navbar-toggler {
     border: solid 4px #01d9da;
     width: 80px;
-    height: 55px;
+    height: 80px;
+    margin-right: 7%;
   }
 }
 
@@ -597,7 +616,7 @@ td {
   }
   .article-redireccion section div a img {
     width: 200px;
-    margin-left: 20%;
+    margin-left: 0%;
     margin-top: 15%;
   }
 }
@@ -623,14 +642,14 @@ td {
   }
   .div-contenedor-carrucel .carousel .carousel-inner .carousel-item .card {
     width: 100%;
-    height: 440px;
+    height: 540px;
   }
   .div-contenedor-carrucel .carousel .carousel-inner .carousel-item .card .img-card-vertical {
-    width: 60%;
+    width: 100%;
     height: 275px;
   }
   .div-contenedor-carrucel .carousel .carousel-inner .carousel-item .card img {
-    width: 70%;
+    width: 100%;
   }
 }
 
