fin index responsive

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -43,7 +43,8 @@ footer{
                     margin-left: 0%;
                 }
                 img{
-                    width: auto;
+                    width: 110px;
+                    margin-top: 2%;
                }
             }
         }
