--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -15,7 +15,7 @@ h1{
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position-x: center;
+    background-position-x: right;
     section{
         display: flex;
         h2{
