--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position-x: center;
+  background-position-x: right;
 }
 .articulo-uno-index section {
   display: flex;
@@ -120,7 +120,7 @@ header {
     display: flex;
   }
   .articulo-uno-index section h2 {
-    font-size: 5rem;
+    font-size: 3.5rem;
   }
   .articulo-uno-index section p {
     font-size: 1.5rem;
@@ -134,7 +134,7 @@ header {
     justify-content: center;
   }
   .articulo-dos-index section h2 {
-    font-size: 5rem;
+    font-size: 3.5rem;
     text-align: center;
   }
   .articulo-dos-index section .card {
@@ -402,7 +402,8 @@ footer section div a img {
     margin-left: 0%;
   }
   footer section div a img {
-    width: auto;
+    width: 110px;
+    margin-top: 2%;
   }
 }
 
